syntax = "proto3";

option java_package = "org.sorapointa.proto";

message AvatarFightPropNotify {
  // enum CmdId {
  //   option allow_alias = true;
  //   NONE = 0;
  //   CMD_ID = 1300;
  //   ENET_CHANNEL_ID = 0;
  //   ENET_IS_RELIABLE = 1;
  // }

  uint64 avatar_guid = 13;
  map<uint32, float> fight_prop_map = 5;
}
