syntax = "proto3";

import "BreakoutVector2.proto";

option java_package = "org.sorapointa.proto";

message BreakoutAction {
  enum BreakoutActionType {
    BREAKOUT_ACTION_TYPE_NONE = 0;
    BREAKOUT_ACTION_TYPE_LAUNCH_BALL = 1;
    BREAKOUT_ACTION_TYPE_DESTROY_BALL = 2;
    BREAKOUT_ACTION_TYPE_FALLING_OBJECT = 3;
    BREAKOUT_ACTION_TYPE_MISSILE = 4;
  }

  BreakoutActionType action_type = 1;
  uint64 client_game_time = 2;
  uint64 server_game_time = 3;
  bool is_failed = 4;
  uint32 pre_index = 5;
  uint32 new_index = 6;
  BreakoutVector2 pos = 7;
  BreakoutVector2 move_dir = 8;
  int32 speed = 9;
  uint32 peer_id = 10;
  uint32 element_type = 11;
  uint32 element_reaction_buff = 12;
  uint32 speed_increase_count = 13;
  bool has_extra_ball = 14;
  BreakoutVector2 extra_ball_dir = 15;
  uint32 extra_ball_index = 16;
  int32 offset = 17;
  uint64 execution_game_time = 18;
}
